crates/lutum/tests/ui/hook_impl_imported_slot_without_companion_items.stderr
error[E0425]: cannot find type `ValidateOutputArgs` in this scope
  --> tests/ui/hook_impl_imported_slot_without_companion_items.rs:10:15
   |
 3 |     pub async fn validate_output(_ctx: &lutum::Lutum, output: &str) -> Result<String, String> {
   |     ---------------------------- similarly named trait `ValidateOutput` defined here
...
10 | #[lutum::hook(ValidateOutput)]
   |               ^^^^^^^^^^^^^^
   |
help: consider importing this struct
   |
 8 + use crate::slots::ValidateOutputArgs;
   |
